fix TypeError for null prompt entry

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./script.js"></script>
 </head>
 <body>
+    <p>Please Open The Developer Console to See the results.</p>
     
 </body>
 </html>
