--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
+
 <body>
     <p>Please Open The Developer Console to See the results.</p>
-    
+    <div id="menu">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissor">Scissor</button>
+    </div>
+    <div id="results">
+        
+    </div>
 </body>
+
 </html>
